# portofoili-v2

.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README-deployment.md  Shuttle.toml
backend/migrations/: 20260414000000_init_schema.sql  20260414000001_update_embedding_dimensions.sql
backend/src/: ai.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/domain/: entities.rs  ports.rs
backend/src/domain/entities/: ai.rs  mod.rs
backend/src/domain/ports/: ai_service.rs  mod.rs
backend/src/infrastructure/: gemini.rs  mod.rs  postgres.rs
backend/src/infrastructure/gemini/: gemini_service.rs  mod.rs
backend/src/presentation/: extractors.rs  mod.rs  routes.rs
backend/src/presentation/handlers/: ai.rs  health.rs
backend/src/service/: ai_service.rs  mod.rs
backend/tests/: ai.rs  hello.rs  integration_tests.rs
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.jsx  App.tsx  index.css  main.tsx
client/src/components/: ChatBuffer.jsx  CodeHighlighter.jsx  EditorArea.jsx  FileIcon.jsx  Sidebar.jsx  StatusLine.jsx  TerminalBuffer.jsx  TopBar.jsx
client/src/components/ui/: FileIcon.tsx
client/src/config/: files.js  files.ts  user.js  user.ts
client/src/content/: about.md  contact.md
client/src/content/algorithms/: two-sum.md
client/src/context/: FileSystemContext.jsx  FileSystemContext.tsx
client/src/types/: index.ts
client/src/utils/: gemini.js  gemini.ts
scripts/: .gitignore  generate_embeddings.py  requirements.txt  schema.sql
(+14 files in other folders)
