[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
genai = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
actix-http = "3"
