[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
genai = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "time", "chrono"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
chrono = { version = "0.4.44", features = ["serde"] }
actix-cors = "0.7.1"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
subtle = "2.6.1"

[dev-dependencies]
actix-http = "3"
